<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip">

            <Button
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="AddClock"
                android:text="@string/add" />

            <Button
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="DeleteClock"
                android:text="@string/delete" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:background="#330000ff"
            android:gravity="center">

            <CheckBox
                android:id="@+id/alarm_ch1"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="1" />

            <CheckBox
                android:id="@+id/alarm_ch2"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="2" />

            <CheckBox
                android:id="@+id/alarm_ch3"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="3" />

            <CheckBox
                android:id="@+id/alarm_ch4"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="4" />

            <CheckBox
                android:id="@+id/alarm_ch5"

                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="5" />

            <CheckBox
                android:id="@+id/alarm_ch6"

                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="6" />

            <CheckBox
                android:id="@+id/alarm_ch7"

                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:background="#33ff0000"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip">


            <CheckBox
                android:id="@+id/alarm_ch_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/my_switch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <EditText
                android:id="@+id/alarm_edit_hour"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":" />

            <EditText
                android:id="@+id/alarm_edit_min"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/change_time"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:enabled="false"
            android:onClick="ChangeTimeSet"
            android:text="@string/change_time" />

        <ListView
            android:id="@+id/alarm_list"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1">

        </ListView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:onClick="ButtonSave"
            android:text="@string/save" />
    </LinearLayout>


</RelativeLayout>

