<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:elg="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip">

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="Calibration"
                android:text="清除数据"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="MeasureInfo"
                android:text="导出测量结果"
                android:textSize="20sp" />

            <Button
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="shareInfo"
                android:text="分享"
                android:textSize="20sp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/heart"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/my_sbp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/sbp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/my_dbp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/dbp"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="openMesure"
                android:text="@string/start"
                android:textSize="20sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="closeMesure"
                android:text="@string/stop"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/ecg_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/tv_ecg_msg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:minHeight="150dp"
                    android:paddingBottom="20dp" />

            </androidx.core.widget.NestedScrollView>

            <!--            <androidx.recyclerview.widget.RecyclerView-->
            <!--                android:id="@+id/rv_ecg"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                android:layout_weight="1"-->
            <!--                android:paddingBottom="10dp" />-->
            <!--            <TextView-->
            <!--                android:id="@+id/tv_ecg_msg"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:layout_weight="1"-->
            <!--                android:minHeight="150dp"-->
            <!--                android:paddingBottom="20dp" />-->

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/red" />

            <!--            <androidx.recyclerview.widget.RecyclerView-->
            <!--                android:id="@+id/rv_ppg"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                android:layout_weight="1"-->
            <!--                android:paddingBottom="10dp" />-->

            <!--            <TextView-->
            <!--                android:id="@+id/tv_ppg_msg"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:layout_weight="1"-->
            <!--                android:minHeight="150dp"-->
            <!--                android:paddingBottom="20dp" />-->

            <androidx.core.widget.NestedScrollView
                android:id="@+id/ppg_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/tv_ppg_msg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:minHeight="150dp"
                    android:paddingBottom="20dp" />

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>

