<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="#33ff0000"
                android:paddingLeft="10dip"
                android:paddingRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/interval"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/medica_period"
                    android:layout_width="match_parent"
                    android:gravity="end|center_vertical"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="00:00" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:onClick="setMedicalInfoStart"
                android:background="#33ff0000"
                android:paddingLeft="10dip"
                android:paddingRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/start_time"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/medica_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="00:00" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="#33ff0000"
                android:onClick="setMedicalInfoEnd"
                android:paddingLeft="10dip"
                android:paddingRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/end_time"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/medica_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="00:00" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="#33ff0000"
                android:paddingLeft="10dip"
                android:paddingRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/my_switch"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/medica_togg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:onClick="ReminSetMedicalInfo"
                android:text="@string/save_medical" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="#330000ff"
                android:paddingLeft="10dip"
                android:paddingRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/interval"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/sit_period"
                    android:layout_width="match_parent"
                    android:gravity="end|center_vertical"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="00:00" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="#330000ff"
                android:paddingLeft="10dip"
                android:onClick="setInfoStartTime"
                android:paddingRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/start_time"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/sit_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="00:00" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="#330000ff"
                android:onClick="setInfoEndTime"
                android:paddingLeft="10dip"
                android:paddingRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/end_time"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/sit_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="00:00" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="#330000ff"
                android:paddingLeft="10dip"
                android:paddingRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/my_switch"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/sit_togg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:onClick="ReminSetsIInfo"
                android:text="@string/save_sit" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="#33ff0000"
                android:paddingLeft="10dip"
                android:paddingRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/interval"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/drink_period"
                    android:layout_width="match_parent"
                    android:gravity="end|center_vertical"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="00:00" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="#33ff0000"
                android:paddingLeft="10dip"
                android:onClick="setDrinkStartTime"
                android:paddingRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/start_time"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/drink_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="00:00" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="#33ff0000"
                android:onClick="setDrinkEndTime"
                android:paddingLeft="10dip"
                android:paddingRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    android:textSize="20sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />


                <TextView
                    android:id="@+id/drink_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="00:00" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="#33ff0000"
                android:paddingLeft="10dip"
                android:paddingRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/my_switch"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/drink_togg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:onClick="ReminSetDrinkInfo"
                android:text="@string/save_drink" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="#330000ff"
                android:paddingLeft="10dip"
                android:onClick="setMeetingTime"
                android:paddingRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/time"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/meeting_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="2017-1-1" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="#330000ff"
                android:onClick="setMeetingHour"
                android:paddingLeft="10dip"
                android:paddingRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="setMeetingHour"
                    android:layout_centerVertical="true"
                    android:text="时分"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/meeting_hour_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="0:00" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="#330000ff"
                android:paddingLeft="10dip"
                android:paddingRight="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/my_switch"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/meeting_togg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:onClick="ReminSetMeetingInfo"
                android:text="@string/save_meeting" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>

